site is responsive the desktop, tablet and mobile. Requires section headings

--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -4,15 +4,70 @@
 
 
 <head>
-	<title>module2 assignment</title>
+	<title>Module2 Assignment</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-
 
 
 <body>
 
+<h1>Asian Cities</h1>
 
-Test
+<div class="Row">
+
+<div class="col-lg-4 col-md-6 col-sml-12">
+
+
+
+
+<p>
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
+
+</p>
+
+</div>
+
+
+<div class="col-lg-4 col-md-6 col-sml-12">
+	
+
+
+
+<p>
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
+
+	
+
+
+</p>
+
+
+
+</div>
+
+
+
+
+<div class="col-lg-4 col-md-12 col-sml-12">
+
+
+
+
+<p>
+
+
+
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
+
+	
+</p>
+
+</div>
+
+</div>
+
 
 
 </body>
