added section headings. Still some issue with clipping when browser window is resized. Looks fine in chrome development tools

--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -6,6 +6,7 @@
 <head>
 	<title>Module2 Assignment</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="viewport" content="width=device-width", initial-scale="1">
 </head>
 
 
@@ -18,11 +19,14 @@
 <div class="col-lg-4 col-md-6 col-sml-12">
 
 
-
+<h2 id="seoul">Seoul</h2>
 
 <p>
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
+Country:<br />
+Size:<br />
+Population:<br />
+Density:<br />
 
 </p>
 
@@ -32,15 +36,18 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <div class="col-lg-4 col-md-6 col-sml-12">
 	
 
-
+<h2 id="taipai">Taipai</h2>
 
 <p>
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
+
+Country:<br />
+Size:<br />
+Population:<br />
+Density:<br />
+
 
 	
-
-
 </p>
 
 
@@ -53,14 +60,15 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula 
 <div class="col-lg-4 col-md-12 col-sml-12">
 
 
-
+<h2 id="tokyo">Tokyo</h2>
 
 <p>
 
 
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibu
-
+Country:<br />
+Size:<br />
+Population:<br />
+Density:<br />
 	
 </p>
 
