--- a/mod2-solution/index.html
+++ b/mod2-solution/index.html
@@ -6,7 +6,7 @@
 <head>
 	<title>Module2 Assignment</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<meta name="viewport" content="width=device-width", initial-scale="1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
@@ -23,10 +23,9 @@
 
 <p>
 
-Country:<br />
-Size:<br />
-Population:<br />
-Density:<br />
+Country: South Korea<br />
+Size: 233.7 mi&sup2; <br />
+Population: 10.01 million<br />
 
 </p>
 
@@ -41,10 +40,9 @@ Density:<br />
 <p>
 
 
-Country:<br />
-Size:<br />
-Population:<br />
-Density:<br />
+Country: Taiwan<br />
+Size: 104.9 mi&sup2;<br />
+Population: 2.619 million<br />
 
 
 	
@@ -65,11 +63,10 @@ Density:<br />
 <p>
 
 
-Country:<br />
-Size:<br />
-Population:<br />
-Density:<br />
-	
+Country: Japan<br />
+Size: 845 mi&sup2;<br />
+Population: 13.35 million<br />
+
 </p>
 
 </div>
